Enpoints and openapi spec
